--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-less": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-connect": "~0.7.1"
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-styleguide": "~0.2.15"
   }
 }
