--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "static-site-generator",
   "devDependencies": {
+    "grunt": "~0.4.5",
     "grunt-contrib-watch": "^0.5.3",
-    "grunt": "^0.4.2",
+    "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-less": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-newer": "^0.7.0",
-    "grunt-kss": "~0.3.1"
+    "grunt-kss": "~0.4.0"
   }
 }
